--- a/Part2/app/src/main/AndroidManifest.xml
+++ b/Part2/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
         </activity>
         <activity android:name=".CreateCourseActivity" />
         <activity android:name=".CourseDetailsActivity" />
+        <activity android:name=".AddStudentActivity" />
+        <activity android:name=".StudentDetailsActivity" />
+        <activity android:name=".EditStudentActivity" />
 
 
 
